# pytorch_spline_conv

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  build.py  build.sh  setup.cfg  setup.py
.github/workflows/: building-conda.yml  building.yml  linting.yml  stale.yml  testing.yml
.github/workflows/cuda/: cu113-Windows.sh  cu115-Windows.sh  cu116-Linux-env.sh  cu116-Windows-env.sh  cu116-Windows.sh  cu117-Windows.sh  cu124-Linux.sh
aten/TH/: THBasis.c  THBasis.h  THConv.c  THConv.h  THWeighting.c  THWeighting.h
aten/TH/generic/: THBasis.c  THConv.c  THWeighting.c
aten/THC/: THC.cu  THC.h  THCAtomics.cuh  THCBasis.cu  THCBasis.h  THCBasisBackward.cuh  THCBasisForward.cuh  THCConv.cu  THCConv.h  THCNumerics.cuh  THCWeighting.cu  THCWeighting.h  common.cuh
aten/THC/generic/: THCBasis.cu  THCBasis.h  THCConv.cu  THCConv.h  THCWeighting.cu  THCWeighting.h  common.cuh
aten/THCC/: THCCBasis.c  THCCBasis.h  THCCConv.c  THCCConv.h  THCCWeighting.c  THCCWeighting.h
aten/THCC/generic/: THCCBasis.c  THCCConv.c  THCCWeighting.c
benchmark/: benchmark.py
cmake/: TorchSplineConvConfig.cmake.in
conda/: build_conda.sh  disk.ps1
conda/pytorch-spline-conv/: README.md  bld.bat  build_conda.sh  conda_build_config.yaml  meta.yaml
conda/torch-spline-conv/: build_conda.sh  meta.yaml
cpu/: basis.cpp  weighting.cpp
csrc/: basis.cpp  spline_conv.h  version.cpp  weighting.cpp
csrc/cpu/: basis_cpu.cpp  basis_cpu.h  utils.h  weighting_cpu.cpp  weighting_cpu.h
csrc/cuda/: atomics.cuh  basis.cpp  basis_cuda.cu  basis_cuda.h  utils.cuh  weighting_cuda.cu  weighting_cuda.h  weighting_kernel.cu
cuda/: basis.cpp  basis_kernel.cu  weighting.cpp  weighting_kernel.cu
script/: cuda.sh
test/: basis.json  benchmark.py  tensor.py  test_basis.py  test_conv.py  test_spline_conv.py  test_weighting.py  utils.py
tests/: test_conv.py
torch_spline_conv/: __init__.py  basis.py  conv.py  spline_conv.py  testing.py  weighting.py
torch_spline_conv/functions/: degree.py  ffi.py  spline_conv.py  spline_weighting.py  utils.py
torch_spline_conv/kernel/: THCAtomics.cuh  THCBasisForward.cuh  common.cuh  kernel.cu  kernel.h
torch_spline_conv/kernel/generic/: kernel.cu
torch_spline_conv/old/: edgewise_spline_weighting_gpu_test.py  spline_conv_gpu.py  spline_conv_test.py  spline_linear_gpu_test.py  spline_quadratic_gpu_test.py
torch_spline_conv/src/: THTensorDimApply.h  cpu.c  cpu.h  cuda.c  cuda.h
torch_spline_conv/src/generic/: cpu.c  cuda.c
torch_spline_conv/utils/: degree.py  ext.py  ffi.py  new.py
